fix(styling): couple of small alignment issues when using flex (#1496)
- when using flex on `.slick-cell` like in Example 7, a couple of small issues came up mostly with flex alignment
- also fix some flex issues directly in ms-select lib and update it here to get fixes, also remove some now duplicate CSS
- we should use `column-gap` instead of `gap` to only change the gap horizontally but not vertically

--- a/examples/vite-demo-vanilla-bundle/src/examples/example21.scss
+++ b/examples/vite-demo-vanilla-bundle/src/examples/example21.scss
@@ -2,7 +2,7 @@
   .slick-cell {
     display: inline-flex;
     align-items: center;
-    gap: 4px;
+    column-gap: 4px;
   }
   .preload {
     font-size: 18px;
